<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_list"
        android:checked="true"
        android:icon="?android:attr/actionModePasteDrawable"
        android:title="@string/nav_list" />

    <item
        android:id="@+id/nav_manage"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_manage" />

    <item
        android:id="@+id/nav_change_login"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_change_login" />

    <item android:title="@string/nav_db_manage">
        <menu>
            <item
                android:id="@+id/nav_db_export"
                android:icon="@android:drawable/stat_sys_download"
                android:title="@string/nav_db_export" />

            <item
                android:id="@+id/nav_db_import"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/nav_db_import" />
        </menu>
    </item>
</menu>