<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp"
        android:text="@string/password_info"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="40dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:gravity="center"
                android:text="@string/list_title_name"
                android:textSize="@dimen/list_font_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_name"
                android:layout_span="5"
                android:hint="@string/input_hint"
                android:padding="@dimen/list_pad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:gravity="center"
                android:text="@string/list_title_id"
                android:textSize="@dimen/list_font_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_id"
                android:layout_span="5"
                android:hint="@string/input_hint"
                android:padding="@dimen/list_pad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:gravity="center"
                android:text="@string/list_title_pw"
                android:textSize="@dimen/list_font_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_password"
                android:layout_span="5"
                android:hint="@string/input_hint"
                android:padding="@dimen/list_pad" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center"
                android:text="@string/list_title_desc"
                android:textSize="@dimen/list_font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_span="5"
                android:padding="@dimen/list_pad" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input_desc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border3"
        android:gravity="start"
        android:hint="@string/input_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:text="@string/init" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:elevation="10dp"
            android:text="@string/delete" />
    </LinearLayout>


</LinearLayout>