<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp" >

    <TextView
        android:id="@+id/input_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pw_exist"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/pw_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

        <ImageView
            android:id="@+id/pw_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

        <ImageView
            android:id="@+id/pw_image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

        <ImageView
            android:id="@+id/pw_image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

        <ImageView
            android:id="@+id/pw_image5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

        <ImageView
            android:id="@+id/pw_image6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/pw_circle_grey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="8"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="9"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/reset"
                    android:textColor="@color/colorGrey2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorGrey2"
                    android:textSize="@dimen/num_pad_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_del"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/del"
                    android:textColor="@color/colorGrey2"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>